# RetroVMS-MINI

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.mini_V1  sdkconfig.mini_V2
.github/workflows/: sphinx-pages.yml
components/can/: CMakeLists.txt
components/can/src/: can.cpp  can.h  canformat.cpp  canformat.h  canformat_canswitch.cpp  canformat_crtd.cpp  canformat_gvret.cpp  canformat_lawicel.cpp  canformat_panda.cpp  canformat_pcap.cpp  canformat_raw.cpp  canlog.cpp  canlog.h  canlog_monitor.cpp  canlog_tcpclient.cpp  canlog_tcpclient.h  canlog_tcpserver.cpp  canlog_udpclient.cpp  canlog_udpserver.cpp  canlog_vfs.cpp  canplay.cpp  canplay.h  canplay_vfs.cpp
components/canopen/docs/: Usage.cpp
components/canopen/src/: canopen.cpp  canopen.h  canopen_client.cpp  canopen_shell.cpp  canopen_worker.cpp
components/dbc/src/: dbc.cpp  dbc_app.cpp  dbc_app.h  dbc_parser.y
components/esp32can/src/: esp32can.cpp
components/mcp2515/src/: mcp2515.cpp  mcp2515.h
components/mcp2515/utils/: MCP2515 Config Reg Calculator.xlsx
components/obd2ecu/src/: obd2ecu.h
components/ovms_buffer/src/: ovms_buffer.cpp
components/ovms_location/src/: ovms_location.cpp  ovms_location.h
components/ovms_tpms/src/: ovms_tpms.cpp  ovms_tpms.h
components/pcp/: pcp.cpp  pcp.h
components/spi/: spi.cpp  spi.h
components/vehicle/: CMakeLists.txt  vehicle.cpp  vehicle.h  vehicle_bms.cpp  vehicle_duktape.cpp  vehicle_poller.cpp  vehicle_poller_vwtp.cpp  vehicle_shell.cpp
components/vehicle_dbc/src/: vehicle_dbc.cpp
components/vehicle_demo/src/: vehicle_demo.cpp
docs/: README.md
docs/source/: index.rst
docs/source/cli/: index.rst
docs/source/crtd/: can_logging.rst
docs/source/protocol_httpapi/: authentication.rst  format.rst  index.rst  requests.rst  welcome.rst
include/: cellular.hpp  global.h  metrics_standard.h  ovms_boot.h  ovms_command.h  ovms_config.h  ovms_events.h  ovms_housekeeping.h  ovms_metrics.h  ovms_peripherals.h  ovms_time.h  ovms_utils.h  ovms_v3.hpp  ovms_vfs.h  sdcard.hpp  shell.hpp  task_base.h
main/: CMakeLists.txt  Kconfig.projbuild  cellular.cpp  idf_component.yml  metrics_standard.cpp  ovms_boot.cpp  ovms_command.cpp  ovms_config.cpp  ovms_events.cpp  ovms_housekeeping.cpp  ovms_main.cpp  ovms_metrics.cpp  ovms_module.cpp  ovms_notify.cpp  ovms_notify.h  ovms_peripherals.cpp  ovms_time.cpp  ovms_utils.cpp  ovms_v3.cpp  ovms_version.cpp  ovms_vfs.cpp  sdcard.cpp  shell.cpp  task_base.cpp
main/ui/: index.html
test/: test_framework.cpp
web-ui/src/: index.html  index.ts
(+35 files in other folders)
